--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -26,8 +26,8 @@
           </div>
         </div>
       <% } else { %>
-        <div class="card-body">
-          <img  class="card-img-top p-0 " src="<%= user.avatar %>" alt="avatar">
+        <div class="card-body" >
+          <img  id="circular" class="card-img-top p-0 justify-content-center  col-6 col-md-9 " src="<%= user.avatar %>" alt="avatar">
           <div class="img-caption text-center font-weight-light font-italic">
             <!-- Show User Name  -->
             <% if(!user.firstName || !user.lastName) { %>
@@ -39,14 +39,14 @@
               Email: <a href="mailto: <%= user.email %>"><%= user.email %></a>
             </h5>
               <% if(!user.intro) { %>
-                      <h5 class="text-capitalize font-weight-light font-itali text-center">No Intro yet.</h5>
+                      <h5 class="text-capitalize font-weight-light font-italic text-center">No Intro yet.</h5>
                <% } else { %>
-                      <h5 class="font-weight-light font-italic text-center">Bio: <%= user.intro %></h5>
+                      <h5 class="font-weight-light text-center">Bio: <%= user.intro %></h5>
                <% }; %>
               <% if(currentUser && user._id.equals(currentUser._id) || currentUser && currentUser.isAdmin) { %>
-                      <a class="btn btn-sm btn-warning " href="/users/<%=user._id%>/edit">Edit Info</a>
+                      <a class="btn btn-sm btn-primary " href="/users/<%=user._id%>/edit"><i class="fas fa-user-edit"></i> Edit Info</a>
                       <form id="delete" class="delete-form" action = "/users/<%= user._id %>?_method=DELETE" method="POST">
-                              <button class="btn btn-sm btn-danger">Delete</button>
+                              <button class="btn btn-sm btn-danger">Delete Profile</button>
                           </form>
               <% } %>
               
