--- a/public/app.css
+++ b/public/app.css
@@ -29,3 +29,44 @@
 #delete{
     display:inline;
 }
+
+#search{
+    width:80%;
+}
+
+/* Google Maps */
+#map {
+    margin-top:10px;
+    height: 400px;
+    width: 100%;
+    margin-bottom:10px;
+    border:1px solid rgba(0,0,0,.125);
+    border-radius :3px;
+
+    
+}
+
+#circular{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+ 
+      background-color: #fff;
+      transform: rotateY(20deg);
+      transform: rotateX(20deg);
+   border-radius: 100%;
+    height: 160px;
+    position: relative;
+    width: 160px;
+  
+  
+}
+#footer{
+position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+  
+   color: white;
+   text-align: center;
+}
