--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,21 +1,25 @@
 
 <%- include("../partials/header") %>
 <div class="container">
-    <div id="he" class="text-center col-md-12">
+   
            <h1 class="text-center  font-weight-light font-italic">EDIT <%= campground.author.username.toUpperCase() %>'s <%=campground.name%></h1>
-    </div>
+   <div style="width:330px; margin:0 auto">
   
-    <div class="former">
+    <div>
        
         <form action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST" enctype="multipart/form-data">
             <input class="form-control mt-4 mb-2"  type="text" name="name" value="<%=campground.name%>">
             <input class="form-control mb-2"  type="number" name="price" value="<%=campground.price%>" min="0.01" step="0.01">
             <input class="form-control mb-2"  type="file" id="image" name="image" accept="image/*" required>
             <input class="form-control  mb-2"  type="text" name="description"  value="<%=campground.description%>"> 
+            <div class="form-group">
+    <label for="location">Location</label>
+    <input class="form-control" type="text" name="location" id="location" value="<%= campground.location %>">
+</div>
             <button id="button" class=" btn btn-lg btn-danger btn-block" >UPDATE</button>
                      
         </form>
-
+</div>
             <a href="/">GOTO HomePage</a>
             <a href="/campgrounds">View Campgrounds</a>
     </div>
