--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,16 +1,20 @@
 <%- include("../partials/header") %>
 <div class="container">
-    <div id="he" class="text-center col-md-12">
-           <h1>CREATE A NEW CAMPGROUND</h1>
-    </div>
+   
+           <h1 class="text-center  font-weight-light font-italic">CREATE A NEW CAMPGROUND</h1>
+   
   
-    <div class="former">
+    <div  style="width:300px; margin:0 auto">
        
         <form action="/campgrounds" method="POST" enctype="multipart/form-data">
             <input class="form-control mt-4 mb-2"  type="text" name="campground[name]" placeholder="Name" required>
             <input class="form-control mb-2"  type="number" name="campground[price]" placeholder="Price" min="0.01" step="0.01" required>
             <input class=" mb-2"  type="file" id="image" name="image" accept="image/*" required>
             <input class="form-control  mb-2"  type="text" name="campground[description]" placeholder="Description" required> 
+            <div class="form-group">
+    <label for="location">Location</label>
+    <input class="form-control" type="text" name="location" id="location" placeholder="Yosemite National Park, CA">
+</div>
             <button id="button" class=" btn btn-lg btn-danger btn-block" >Submit</button>
                      
         </form>
