--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,24 +1,31 @@
 <%- include("partials/header") %>
 
- <div id="he" class="text-center col-md-12">
-          <h1>WELCOME TO LOGIN</h1>
-         
-    </div>
+ <div class="container">
+    <h1 style="" class="text-center font-weight-light ">WELCOME TO LOGIN</h1>
+    <div style="width:300px; margin:0 auto">
 
 
-<div class="former">
+
     <form action="/login" method="POST">
-    <input class="form-control mt-4 mb-2" type ="text" name="username" placeholder="Username">
-    <input class="form-control mb-2" type ="password" name="password" placeholder="Password">
-    <input  id="button" class=" btn btn-lg btn-success btn-block" type ="submit" value="Login">
+        <label class="mt-4">Username</label>
+    <input class="form-control  mb-2" type ="text" name="username" placeholder="Username" required>
+    <label>Password</label>
+    <input class="form-control mb-2" type ="password" name="password" placeholder="Password" required>
+   
+    <input type="checkbox" > <label style="font-size:15px;">Remember Me</label>
+    <a style="font-size:15px;" class="float-right mb-2" href="/forgot">Forgot Password?</a>
+    
+    <button id="button" class=" btn btn-lg btn-success btn-block"><i class="fas fa-sign-in-alt"></i> Login</button>
+    
     
 </form>
 <a href="/register">New User? Sign Up</a>
 
-<a href="/forgot">Forgot Password?</a>
+
+
+
 </div>
-
-
+</div>
 
 
 <%- include("partials/footer") %>
