--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,43 +6,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--FontAwesome Kit-->
     <script src="https://kit.fontawesome.com/93c2900367.js" crossorigin="anonymous"></script>
-
+<link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital@1&family=Satisfy&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="/app.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <style type="text/css">
   		body {
   		 padding-top: 70px;
-  		 padding-bottom:30px;
+  		
   		 </style>
  
    
    
-    <title>Welcome To CampGrounds</title>
+    <title>YelpCamp</title
+    <i class="fas fa-campground"></i>
+    <link rel = "icon" type = "image/png" href = "/icon.png">
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark mb-4 ">
+    <nav class="navbar navbar-expand-lg navbar-dark  fixed-top mb-4 " style="background-color:indigo;">
       <div class="container-fluid">
-  <a class="navbar-brand" href="/">Yelp Camp</a>
+  <a class="navbar-brand" href="/"><i class="fas fa-campground"></i>Yelp Camp</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item <%= typeof page !== 'undefined' && page === 'campgrounds' ? 'active': '' %>  ">
-        <a class="nav-link active" href="/campgrounds">Home</a>
+        <a class="nav-link active" href="/campgrounds"><i class="fas fa-home"></i>Home</a>
       </li>
-     <!-- <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+     <li class="nav-item active">
+        <a class="nav-link" href="/about">About</a>
       </li>
-    -->
+    
     </ul>
     
     
-    <div  style="width:50%;">
+    <div  style="width:70%;">
   <form class="form-inline"  action="/campgrounds" method="GET" >
-    <input  class="form-control mr-sm-2" name="search" type="search" placeholder="Campground search..." aria-label="Search">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    <input id="search"  class="form-control mr-sm-2" name="search" type="search" placeholder="Campground search..." aria-label="Search">
+    <button  class="btn btn-primary my-2 my-sm-0" type="submit">Search</button>
   </form>
 </div>
     
@@ -58,14 +60,13 @@
           <a class="nav-link active" href="/register">Sign Up</a>
         </li>
         <% }else{ %>
-        <li class="nav-item dropdown active">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Welcome  <%= currentUser.username %>
+        <li class="nav-item dropdown active" >
+        <a class="nav-link dropdown-toggle px-0 mr-2 ml-0" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><%= currentUser.username %>
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/users/<%= currentUser.id%>">My Profile</a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown" >
+          <a class="dropdown-item" href="/users/<%= currentUser.id%>"><i class="fas fa-user"></i> My Profile</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="/users/<%=currentUser.id%>/edit">Edit Profilet</a>
+          <a class="dropdown-item" href="/users/<%=currentUser.id%>/edit"><i class="fas fa-user-edit"></i> Edit Profile</a>
           
         </div>
       </li>
