--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,27 +1,29 @@
 <%- include("partials/header") %>
 
- <div id="" class="text-center col-md-12">
-           <h1>Create A New Account</h1>
-          <p class=" lead">It's quick and easy.</p>
-    </div>
+ <div class="container" >
+    <h1  class="text-center font-weight-light ">SIGN UP</h1>
+          <p class=" lead text-center">It's quick and easy.</p>
+<div style="width:300px; margin:0 auto;">
      
 
-<div style=" margin-top:30px"  class="former">
+
     <form action="/register" method="POST">
-    <input class="form-control mt-5 mb-2" type ="text" name="username" placeholder="Username">
+    <input class="form-control mt-3 mb-2" type ="text" name="username" placeholder="Username">
     <input class="form-control mb-2" type ="text" name="firstName" placeholder="Firstname">
      <input class="form-control mb-2" type ="text" name="lastName" placeholder="Lastname">
      <input class="form-control mb-2" type ="email" name="email" placeholder="email">
      <input class="form-control mb-2" type ="text" name="avatar" placeholder="Profile Image url">
      <input class="form-control mb-2" type ="password" name="password" placeholder="Password">
      <input class="form-control mb-2" type ="password" name="adminCode" placeholder="Admin Code">
-    <input  id="button" class=" btn btn-lg btn-primary btn-block" type ="submit" value="Sign Up">
+     
+     <button id="button" class=" btn btn-lg btn-primary btn-block"><i class="fas fa-sign-in-alt"></i> Sign Up</button>
+
     
 </form>
     <a href="/login">Already A User?Login</a>
+
 </div>
 
-
-
+    </div>
 
 <%- include("partials/footer") %>
