--- a/views/register.ejs
+++ b/views/register.ejs
@@ -17,12 +17,21 @@
      <input class="form-control mb-2" type ="password" name="adminCode" placeholder="Admin Code">
      
      <button id="button" class=" btn btn-lg btn-primary btn-block"><i class="fas fa-sign-in-alt"></i> Sign Up</button>
+     
 
     
 </form>
     <a href="/login">Already A User?Login</a>
+    <div style="margin:0 auto;" class="orSeperator text-center"><span> OR </span></div>
+
+            <a id="facebookButton" id="button" type="button" href="/auth/facebook" class="btn btn-facebook btn-md btn-success text-center ml-5">
+                <span class="icon"><i class="fa fa-facebook"></i></span>
+                <span class="btn-text">Sign up with Facebook</span>
+            </a>
+            </div>
 
 </div>
+
 
     </div>
 
