--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -5,10 +5,10 @@
     <header class="jumbotron text-center  mt-4">
         <div class="container">
         <h1><i class="fas fa-campground"></i>WELCOME TO YELPCAMP</h1>
-        <p> View our hand picked campgrounds from all over the world</p>
-        <p>
-            <a class="btn btn-primary btn-lg" href="/campgrounds/new">Add New Campground</a>
-        </p>
+        <p class="lead"> View our hand picked campgrounds from all over the world</p>
+        <button class="btn btn-primary btn-lg" onclick="location.href = '/campgrounds/new' ;">
+            Add New Campground
+        </button>
         </div>
     </header>
     
