--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -13,13 +13,13 @@
             <input class="form-control  mb-2"  type="text" name="campground[description]" placeholder="Description" required> 
             <div class="form-group">
     <label for="location">Location</label>
-    <input class="form-control" type="text" name="location" id="location" placeholder="Yosemite National Park, CA">
+    <input class="form-control" type="text" name="location" id="location" placeholder="Hyderabad,India">
 </div>
             <button id="button" class=" btn btn-lg btn-danger btn-block" >Submit</button>
                      
         </form>
 
-            <a href="/">GOTO HomePage</a>
+           
             <a href="/campgrounds">View Campgrounds</a>
     </div>
 
