--- a/views/about.ejs
+++ b/views/about.ejs
@@ -9,14 +9,19 @@
         <h4 class="text-center mt-4"><i class="fas fa-phone-alt"></i> Sales Enquiries <h4>
             <hr>
 <p class="lead">Interested in any of our products? Talk to our experts today</p>
-<p class="lead">Email: yelpcamp.srinathmerugu@gmail.com <a href="mailto: yelpcamp.srinathmerugu@gmail.com"></a></p>
-<p class="lead">Email: srinathmerugu777@gmail.com <a href="mailto: yelpcamp.srinathmerugu@gmail.com"></a></p>
+<p class="lead">
+    Email:<a href="mailto: yelpcamp.srinathmerugu@gmail.com?Subject=YelpCampFeedback">yelpcamp.srinathmerugu@gmail.com</a>
+    </p>
+    <p class="lead">
+    Email:<a href="mailto: yelpcamp.srinathmerugu@gmail.com?Subject=EventAppFeedback">srinathmerugu777@gmail.com</a>
+    </p>
+    
         </div>
         </div>
 
 
 <footer>
-          
+         
     
         
 <div class="container mt-5">
@@ -24,10 +29,12 @@
         <h4 class="text-center  font-weight-light" > CONNECT WITH US</h4>
         
           <ul class="text-center mr-5" style="font-size: 34px;">
-                <a href="https://www.instagram.com/srinathmerugu/" rel="" target="_blank"> <i class="fab fa-instagram " style="color:#3f729b;"></i></a>
-                <a href="https://www.facebook.com/SuperboYSrinatH" rel="" target="_blank"><i class="fab fa-facebook-square" style="color:#3b5998; ;display: inline;"></i></a>
-                <a href="https://www.twitter.com/imsrinath7" rel="" target="_blank"><i class="fab fa-twitter-square" style="color:#00acee; ;display:inline;"></i></a>
-                <a href="https://www.github.com/srinathmerugu" rel="" target="_blank"><i class="fab fa-github-square" style="color:black; ;display:inline;"></i></a>
+                <a style="text-decoration: none !important;"  href="https://www.instagram.com/srinathmerugu/" rel="" target="_blank"> 
+                    <img class="mb-2" style="width: 34px;height: 35px;" src ="https://www.freepnglogos.com/uploads/instagram-logos-png-images-free-download-2.png" >
+                </a>
+                <a style="text-decoration: none !important;" href="https://www.facebook.com/SuperboYSrinatH" rel="" target="_blank"><i class="fab fa-facebook-square" style="color:#3b5998; ;display: inline;"></i></a>
+                <a style="text-decoration: none !important;" href="https://www.twitter.com/imsrinath7" rel="" target="_blank"><i class="fab fa-twitter-square" style="color:#00acee; ;display:inline;"></i></a>
+                <a style="text-decoration: none !important;" href="https://www.github.com/srinathmerugu" rel="" target="_blank"><i class="fab fa-github-square" style="color:black; ;display:inline;"></i></a>
            
           </ul>
     </div>
@@ -40,4 +47,5 @@
 
 
       </footer>
+      
 <%- include("partials/footer") %>
