--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -8,9 +8,12 @@
     <div>
        
         <form action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST" enctype="multipart/form-data">
-            <input class="form-control mt-4 mb-2"  type="text" name="name" value="<%=campground.name%>">
+            <label class="mt-4 ">Campground Name</label>
+            <input class="form-control mb-2"  type="text" name="name" value="<%=campground.name%>">
+            <label>Cost</label>
             <input class="form-control mb-2"  type="number" name="price" value="<%=campground.price%>" min="0.01" step="0.01">
-            <input class="form-control mb-2"  type="file" id="image" name="image" accept="image/*" required>
+            <input class=" mb-2"  type="file" id="image" name="image" accept="image/*" required>
+            <label>Description</label>
             <input class="form-control  mb-2"  type="text" name="description"  value="<%=campground.description%>"> 
             <div class="form-group">
     <label for="location">Location</label>
@@ -20,7 +23,7 @@
                      
         </form>
 </div>
-            <a href="/">GOTO HomePage</a>
+           
             <a href="/campgrounds">View Campgrounds</a>
     </div>
 
