made few changes in styles

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -30,7 +30,7 @@
         
           <ul class="text-center mr-5" style="font-size: 34px;">
                 <a style="text-decoration: none !important;"  href="https://www.instagram.com/srinathmerugu/" rel="" target="_blank"> 
-                    <img class="mb-2" style="width: 34px;height: 35px;" src ="https://www.freepnglogos.com/uploads/instagram-logos-png-images-free-download-2.png" >
+                    <img class="mb-2" style="width: 34px;height: 35px;" src ="/insta.png" alt="instagram icon">
                 </a>
                 <a style="text-decoration: none !important;" href="https://www.facebook.com/SuperboYSrinatH" rel="" target="_blank"><i class="fab fa-facebook-square" style="color:#3b5998; ;display: inline;"></i></a>
                 <a style="text-decoration: none !important;" href="https://www.twitter.com/imsrinath7" rel="" target="_blank"><i class="fab fa-twitter-square" style="color:#00acee; ;display:inline;"></i></a>
