--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -40,7 +40,7 @@
       
       <a href="/campgrounds/<%= campground._id %>">
           <div class="card-body">
-              <h5 class="card-title text-capitalize font-italic"><%=campground.name.toUpperCase()%></h5>
+              <h5 style="color:black;" class="card-title text-capitalize font-italic"><%=campground.name.toUpperCase()%></h5>
           </div>
     
     </a>
