--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -39,7 +39,7 @@
               Email: <a href="mailto: <%= user.email %>"><%= user.email %></a>
             </h5>
               <% if(!user.intro) { %>
-                      <h5 class="text-capitalize font-weight-light font-italic text-center">No Intro yet.</h5>
+                      <h5 class="text-capitalize font-weight-light font-italic text-center">No Bio yet.</h5>
                <% } else { %>
                       <h5 class="font-weight-light text-center">Bio: <%= user.intro %></h5>
                <% }; %>
