--- a/views/users/admin.ejs
+++ b/views/users/admin.ejs
@@ -1,6 +1,8 @@
 <%- include("../partials/header") %>
 
 <div class="container">
+   <h1 class="text-center  font-weight-light font-italic"> <i class="fas fa-wrench"></i> DASHBOARD</h1>
+   <hr>
   <div class="row">
 
     <!-- side bar info  -->
@@ -36,9 +38,9 @@
                       </a>
                       <hr>
                       <% if(currentUser.isAdmin){ %>
-                          <a  id="clr" class="btn btn-sm btn-primary" href="/campgrounds/<%= campground._id %>/edit"><i class="fas fa-pen"></i> Edit</a>
+                          <a  id="clr" class="btn btn-sm btn-primary mt-2" href="/campgrounds/<%= campground._id %>/edit"><i class="fas fa-pen"></i> Edit</a>
                           <form id="delete" class="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
-                              <button class="btn btn-sm btn-danger"><i class="fas fa-trash-alt"></i> Delete</button>
+                              <button class="btn btn-sm btn-danger mt-2"><i class="fas fa-trash-alt"></i> Delete</button>
                           </form>
                       <% } %>
                  </figure>
@@ -46,7 +48,7 @@
             <% }); %>
         </div>
       </div>
-
+<hr>
       <!-- Admin All User section -->
       <div class="container" id="all_users" style="margin: 100px auto">
 
@@ -58,7 +60,7 @@
             <div class="col-md-3 col-sm-6">
                   <figure class="figure">
                       <a href="/users/<%= user._id %>">
-                        <img class="img__img img-fluid rounded user-list-item"
+                        <img id="circular" class="card-img-top p-0 "
                         src="<%= user.avatar %>" alt="<%= user.username %>" >
                         <!-- Show User Name  -->
                         <% if(!user.firstName || !user.lastName) { %>
