--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,7 +23,7 @@
     <link rel = "icon" type = "image/png" href = "/icon.png">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark  fixed-top mb-4 " style="background-color:#3b5998;">
+    <nav class="navbar navbar-expand-lg navbar-dark  fixed-top mb-4 " style="background-color:#115998;">
       <div class="container-fluid">
   <a class="navbar-brand" href="/"><i class="fas fa-campground"></i>Yelp Camp</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
