--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -38,7 +38,7 @@
     });
   }
 </script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAetBE_LExvM82uMTPyZBD_KWIfwl4Wb8E&callback=initMap"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY_HERE&callback=initMap"></script>
 
             </div>
       </div>
